--- a/package.json
+++ b/package.json
@@ -3,21 +3,26 @@
   "version": "1.0.0",
   "description": "",
   "bin": {
-    "app": "./bin/app.js"
+    "app": "./bin/pairlearn.js"
   },
-  "main": "bin/app.js",
+  "main": "bin/pairlearn.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node bin/app.js",
-    "nodemon": "node_modules/nodemon/bin/nodemon.js --inspect=0.0.0.0:5858 -L bin/app.js",
-    "nodemon-wait": "node_modules/nodemon/bin/nodemon.js --inspect-brk=0.0.0.0:5858 -L bin/app.js"
+    "start": "node bin/pairlearn.js",
+    "nodemon": "node_modules/nodemon/bin/nodemon.js --inspect=0.0.0.0:5858 -L bin/pairlearn.js",
+    "nodemon-wait": "node_modules/nodemon/bin/nodemon.js --inspect-brk=0.0.0.0:5858 -L bin/pairlearn.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^1.11.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.17.2",
+    "dotenv": "^4.0.0",
+    "express": "^4.15.3"
   }
 }
