--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha",
+    "test": "npm run build && mocha",
+    "test-debug": "npm run build && node_modules/.bin/mocha --inspect-brk=0.0.0.0:5858",
     "prestart": "",
-    "start": "node bin/pairlearn.js",
+    "start": "node bin/pairlearn.js &",
+    "stop": "pkill --signal SIGINT pairlearn",
     "start-dev": "nodemon -L --watch src --ext js,ts,json,env --exec \"bash -c\" \"npm run build && node --inspect=0.0.0.0:5858 bin/pairlearn.js\"",
     "inspect-brk": "nodemon --inspect-brk=0.0.0.0:5858 -L bin/pairlearn.js",
     "build": "tsc"
@@ -23,6 +25,7 @@
     "@types/express": "^4.0.35",
     "@types/grunt": "^0.4.21",
     "@types/node": "^7.0.29",
+    "child_process": "^1.0.2",
     "mocha": "^3.4.2",
     "nodemon": "^1.11.0",
     "typescript": "^2.3.4"
